--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.0",
+    "node-outlook": "^1.1.8",
     "simple-oauth2": "^2.2.1"
   }
 }
